--- a/web_app/app/index.html
+++ b/web_app/app/index.html
@@ -12,6 +12,7 @@
 		<!-- build:css(.) styles/vendor.css -->
 		<!-- bower:css -->
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
 		<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
@@ -150,6 +151,8 @@
 		<script src="bower_components/angular-route/angular-route.js"></script>
 		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 		<script src="bower_components/angular-touch/angular-touch.js"></script>
+		<script src="bower_components/angular-aria/angular-aria.js"></script>
+		<script src="bower_components/angular-material/angular-material.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
